# convergio-billing

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json  tarpaulin-report.json
.github/: dependabot.yml
crates/convergio-billing/: Cargo.toml
crates/convergio-billing/src/: alerts.rs  audit.rs  budget.rs  ext.rs  invoices.rs  lib.rs  mcp_defs.rs  metering.rs  rates.rs  routes.rs  schema.rs  settlement.rs  types.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md
