[package]
name = "convergio-billing"
description = "Billing, metering, inter-org economics, rate cards, invoices, cost alerts"
version = "0.1.3"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
